--- a/table/index.html
+++ b/table/index.html
@@ -21,9 +21,9 @@
     <td class="empty" colspan="10" rowspan="2"></td>
     <td style="background-color: red"><sup>5</sup><sub>B</sub></td>
     <td><sup>6</sup><sub>C</sub></td>
-    <td><sup>7</sup><sub>N</sub></td>
+    <td style="background-color: red"><sup>7</sup><sub>N</sub></td>
     <td><sup>8</sup><sub>O</sub></td>
-    <td><sup>9</sup><sub>F</sub></td>
+    <td style="background-color: red"><sup>9</sup><sub>F</sub></td>
     <td><sup>10</sup><sub>Ne</sub></td>
 </tr>
 <tr>
