--- a/Professional website/about.html
+++ b/Professional website/about.html
@@ -12,7 +12,7 @@
         <h1>WEB Design</h1>
         <div>
             <ul class="nav">
-				<li><a href="#">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li class="current"><a href="#">About</a></li>
 				<li><a href="#">Services</a></li>
 			</ul>
