--- a/Professional website/index.html
+++ b/Professional website/index.html
@@ -12,14 +12,14 @@
         <h1>WEB Design</h1>
         <div>
             <ul class="nav">
-				<li class="current"><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
+				<li class="current"><a href="index.html">Home</a></li>
+				<li><a href="./about.html">About</a></li>
 				<li><a href="#">Services</a></li>
 			</ul>
         </div>
     </header>
     <main>
-        <div>
+        <div class="head">
             <h1>Adorable Professional Website</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi corrupti odit nemo 
                 animi fugit corporis laboriosam, facere, sunt, eius eligendi hic ducimus.
