--- a/Professional website/index.html
+++ b/Professional website/index.html
@@ -14,7 +14,7 @@
             <ul class="nav">
 				<li class="current"><a href="index.html">Home</a></li>
 				<li><a href="./about.html">About</a></li>
-				<li><a href="#">Services</a></li>
+				<li><a href="service.html">Services</a></li>
 			</ul>
         </div>
     </header>
