--- a/Professional website/service.html
+++ b/Professional website/service.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>About</title>
+    <title>Service</title>
 </head>
 <body>
     <header>
@@ -17,12 +17,10 @@
 				<li><a href="service.html">Services</a></li>
 			</ul>
         </div>
-        
     </header>
-    <p>jhjgjshdashdahsdahd</p>
+    <p>dhsj</p>
     <footer>
         <p>Web Design, copyright &copy; 2021</p>
     </footer>
-
 </body>
 </html>
