--- a/Professional website/about.html
+++ b/Professional website/about.html
@@ -19,7 +19,9 @@
         </div>
         
     </header>
-    <p>jhjgjshdashdahsdahd</p>
+    <section>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto aspernatur molestiae quam, non vitae expedita. Amet exercitationem accusantium laboriosam illo dolorum similique. Esse atque unde nesciunt quibusdam commodi ex a!</p>
+    </section>
     <footer>
         <p>Web Design, copyright &copy; 2021</p>
     </footer>
