add service page

--- a/Professional website/service.html
+++ b/Professional website/service.html
@@ -18,7 +18,49 @@
 			</ul>
         </div>
     </header>
-    <p>dhsj</p>
+    <section>
+            <div class="news">
+                <div><h1>Welcome to Our Newsletter</h1></div>
+                <div><form action="">
+                    <input type="email" placeholder="Enter Email">
+                    <Button type="submit">Subscribe</Button>
+                </form></div>
+            </div>
+    </section>
+    <section>
+        <div class="service">
+            <h3>Services</h3>
+            <div class="web">
+                <h3>Website Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, ad. Odio magnam alias dolore molestiae fugit iure sequi est, sunt nam iste sed, dolor incidunt. Nulla placeat magnam tenetur recusandae.</p>
+                <p>Pricing: 23723278</p>
+            </div>
+            <div class="web">
+                <h3>Website Maintance</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, ad. Odio magnam alias dolore molestiae fugit iure sequi est, sunt nam iste sed, dolor incidunt. Nulla placeat magnam tenetur recusandae.</p>
+                <p>Pricing: 23723278</p>
+            </div>
+            <div class="web">
+                <h3>Website Hosting</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, ad. Odio magnam alias dolore molestiae fugit iure sequi est, sunt nam iste sed, dolor incidunt. Nulla placeat magnam tenetur recusandae.</p>
+                <p>Pricing: 23723278</p>
+            </div>
+        </div>
+    </section>
+    <aside>
+        <div class="sidebar">
+            <h3>Get A Quote</h3>
+            <label for=""> Name</label><br>
+            <input type="text" placeholder="Name" name="" id=""><br><br>
+            <label for="">Email</label><br>
+            <input type="email" placeholder="Email Address" name="" id=""><br><br>
+            <label for="">Message</label><br>
+            <input type="text"  placeholder="Message" name="" id=""><br><br>
+            <button type="submit">Send</button><br>
+            
+
+        </div>
+    </aside>
     <footer>
         <p>Web Design, copyright &copy; 2021</p>
     </footer>
