--- a/Professional website/about.html
+++ b/Professional website/about.html
@@ -20,8 +20,27 @@
         
     </header>
     <section>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto aspernatur molestiae quam, non vitae expedita. Amet exercitationem accusantium laboriosam illo dolorum similique. Esse atque unde nesciunt quibusdam commodi ex a!</p>
+        <div class="news">
+            <div><h1>Welcome to Our Newsletter</h1></div>
+            <div><form action="">
+                <input type="email" placeholder="Enter Email">
+                <Button type="submit">Subscribe</Button>
+            </form></div>
+        </div>
     </section>
+    <section>
+        <div class="about">
+            <h1>About Us</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, consequuntur! Nemo magnam provident, placeat odio, sit nulla, fugiat beatae praesentium totam hic dolor obcaecati molestiae. In optio voluptates rerum quos. Facere magni, sapiente, minus laudantium quas quo earum voluptatibus ipsam, pariatur ut deleniti expedita. Aliquam tempora vero reiciendis corporis voluptatem atque rem.</p>
+            <p class="dark">Lorem ipsum, dolor sit amet Lorem ipsum,Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae aperiam non atque tempore inventore est, necessitatibus facilis ipsum aliquam voluptate soluta dignissimos esse consequuntur enim dolorum quaerat ipsam ullam fugit! dolor sit amet consectetur adipisicing elit. Non dolorem culpa, alias fuga beatae, aliquid sed, ex consequuntur laboriosam sit accusamus quo rem natus eius. Incidunt, veniam? Quos, debitis adipisci. consectetur adipisicing elit. Quam delectus explicabo iure eos quis soluta ipsa, veritatis ad necessitatibus consequuntur libero quod ducimus quasi qui, maxime facere magnam minus. Iste?</p>
+        </div>
+    </section>
+    <aside>
+        <div class="sidebar">
+            <h3>What do you do?</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto totam aliquam fugiat quae unde deserunt mollitia voluptatibus libero quibusdam quis at dicta, hic nobis vero excepturi voluptatem eius assumenda voluptas!</p>
+        </div>
+    </aside>
     <footer>
         <p>Web Design, copyright &copy; 2021</p>
     </footer>
