--- a/online calculatr/index.html
+++ b/online calculatr/index.html
@@ -9,15 +9,12 @@
 </head>
 <body>
     <header>
-        <Div class="head">
-            <div>
-        <h1>Online Calculator</h1></div> 
-        <br>
-        <div>
+    <div class="head">
+        <h1>Online Calculator</h1>
+    </div>
+    <div class="name">
         <h3>By: Saira Malik</h3>
     </div>
-    <p>hghfh</p>
-         </Div>
     </header>
     <main>
         <div class="cal">
